--- a/lfp_app_base/lfp_app_opensrc/makefile
+++ b/lfp_app_base/lfp_app_opensrc/makefile
@@ -1,6 +1,6 @@
 ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
 LFP_PRJ_NAME = lfp_tech_advance
-LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
+LFP_ROOT_PATH = $(firstword $(subst $(LFP_PRJ_NAME),$(LFP_PRJ_NAME) ,$(shell pwd)))
 endif
 include $(LFP_ROOT_PATH)/lfp_rules.make
 
