--- a/lfp_arch/linux/makefile
+++ b/lfp_arch/linux/makefile
@@ -1,18 +1,18 @@
 ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
 LFP_PRJ_NAME = lfp_tech_advance
-LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
+LFP_ROOT_PATH = $(firstword $(subst $(LFP_PRJ_NAME),$(LFP_PRJ_NAME) ,$(shell pwd)))
 endif
 include $(LFP_ROOT_PATH)/lfp_rules.make
 
 CUR_SRC_PATH = $(shell pwd)/src
-CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
+CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
-INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/include/
+INCLUDE_PATH := -I$(LFP_ROOT_PATH)/lfp_include/
+INCLUDE_PATH += -I$(LFP_ROOT_PATH)/lfp_include/lfp_util/
+INCLUDE_PATH += -I$(LFP_ROOT_PATH)/lfp_include/lfp_arch/
+INCLUDE_PATH += -I$(LFP_ROOT_PATH)/lfp_include/lfp_arch/linux/
+INCLUDE_PATH += -I$(LFP_ROOT_PATH)/lfp_include/lfp_arch/linux/include/
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
 LIB_ARCH = liblfp_arch_linux.a
