修改目录层级架构
lfp_app_base子目录精简

--- a/.config
+++ b/.config
@@ -1,2 +1,2 @@
-LFP_LINK_OBJS += -llfp_app_busybox
-LFP_LINK_OBJS += -llfp_libs_threadpool -llfp_libs_dlist -llfp_libs_slist -llfp_libs_socket
+LFP_LINK_OBJS += -llfp_busybox
+LFP_LINK_OBJS += -llfp_dlist -llfp_slist -llfp_socket
