lfp_base_init修改为lfp_app_base

--- a/lfp_app_base/make.config
+++ b/lfp_app_base/make.config
@@ -1,8 +1,8 @@
 # 1. loading building rules
-include make.config
+include build.config
 
 # 2. src files
-MODULE_SRC_DIR := $(shell pwd)
+MODULE_SRC_DIR := .
 
 # 3. include files
 MODULE_INCLUDE_DIR := 
@@ -21,5 +21,5 @@ MODULE_DEPS_LIBS :=
 MODULE_DEPS_LIBS += -llfp_util
 
 # 6. building target describe(now : .a, .so, .exe)
-TARGET_NAME := lfp_dlist
+TARGET_NAME := lfp_app_base
 TARGET_TYPE := .so
