--- a/lfp_app_base/lfp_libs/lfp_threadpool/make.config
+++ b/lfp_app_base/lfp_libs/lfp_threadpool/make.config
@@ -12,7 +12,7 @@ MODULE_INCLUDE_DIR += \
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_util/	\
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_arch/	\
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_arch_adapter/	\
-		-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_libs/	\
+		-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_libs/
 
 # 4. sub module dirs(opt)
 MODULE_SUB_DIRS := 
@@ -20,7 +20,7 @@ MODULE_SUB_DIRS :=
 # 5. building deps
 MODULE_DEPS_DIR := $(LFP_OBJ_PATH)
 MODULE_DEPS_LIBS := 
-MODULE_DEPS_LIBS += -llfp_util
+MODULE_DEPS_LIBS += -llfp_dlist -llfp_util
 
 # 6. building target describe(now : .a, .so, .exe)
 TARGET_NAME := lfp_threadpool
