--- a/lfp_exec/make.config
+++ b/lfp_exec/make.config
@@ -12,7 +12,7 @@ MODULE_INCLUDE_DIR :=
 MODULE_SUB_DIRS := 
 
 # 5. building deps
-MODULE_DEPS_DIR := $(LFP_OBJ_PATH)
+MODULE_DEPS_DIR := $(wildcard $(LFP_OBJ_PATH)/*.so) $(wildcard $(LFP_OBJ_PATH)/*.a)
 MODULE_DEPS_LIBS := -lpthread
 
 # 6. building target describe(now : .a, .so, .exe)
