app_base当前文件构建

--- a/lfp_app_base/make.config
+++ b/lfp_app_base/make.config
@@ -9,6 +9,7 @@ MODULE_INCLUDE_DIR :=
 MODULE_INCLUDE_DIR += \
 		-I$(LFP_ROOT_PATH)/lfp_include/	\
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_util/	\
+		-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/	\
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_libs/	\
 		-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_libs/lfp_dlist/
 
