clean使用通配符%进行替换

--- a/lfp_app_base/lfp_libs/makefile
+++ b/lfp_app_base/lfp_libs/makefile
@@ -19,7 +19,7 @@ clean:FORCE
 clean_all_libs: $(all_clean) FORCE
 
 $(all_clean): FORCE
-	cd $(patsubst __clean__%, , $@) && make clean
+	cd $(patsubst __clean__%, %, $@) && make clean
 
 FORCE:
 
