--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "lfp_app_unity_test.h": "c",
         "lfp_log.h": "c",
         "lfp_assert.h": "c",
-        "lfp_threadpool.h": "c"
+        "lfp_threadpool.h": "c",
+        "lfp_dlist.h": "c"
     },
     "cmake.configureOnOpen": true
 }
