--- a/lfp_app_base/lfp_busybox/make.config
+++ b/lfp_app_base/lfp_busybox/make.config
@@ -10,7 +10,10 @@ MODULE_INCLUDE_DIR :=
 MODULE_INCLUDE_DIR += \
 				-I$(LFP_ROOT_PATH)/lfp_include/lfp_util/	\
 				-I$(LFP_ROOT_PATH)/lfp_include/				\
+				-I$(LFP_ROOT_PATH)/lfp_include/lfp_arch/ 	\
+				-I$(LFP_ROOT_PATH)/lfp_include/lfp_arch_adapter/	\
 				-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_busybox/	\
+				-I$(LFP_ROOT_PATH)/lfp_include/lfp_app_base/lfp_libs/
 
 # 4. sub module dirs(opt)
 MODULE_SUB_DIRS := 
